<resources>
    <string name="app_name">Two Urban Sisters</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="title_activity_customer_dash_board">CustomerDashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peter Kimeli</string>
    <string name="nav_header_subtitle">kimelipeter20@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Produtcs</string>
    <string name="menu_mycart">My Cart</string>

    <string name="home_second">Home Second</string>
    <string name="title_back">Home</string>
    <string name="title_usb">Categories</string>
    <string name="title_logo">Sales</string>
    <string name="title_orders">Orders</string>
    <string name="title_sales">Sales</string>
    <string name="menu_products">Produtcs</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->

</resources>
